# python-gyazo

./: .codeclimate.yml  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  packaging.yml
docs/: Makefile  conf.py  gyazo.rst  index.rst  make.bat  reference.rst
docs/source/: backup.rst  conf.py  index.rst  license.rst  quickstart.rst
gyazo/: __about__.py  __init__.py  __init__.pyi  api.py  api.pyi  error.py  error.pyi  image.py  image.pyi
gyazo/themes/default/: index.css  index.html
scripts/: gyazo-backup
tests/: api.py  image.py  test_api.py  test_image.py
