[metadata]
name = python-gyazo
version = attr: gyazo.__about__.__version__
author = Yusuke Miyazaki
author_email = miyazaki.dev@gmail.com
license = MIT
license_file = LICENSE
description = A Python wrapper for Gyazo API
keywords = gyazo
url = https://github.com/ymyzk/python-gyazo
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet

[options]
packages = gyazo
install_requires =
    python-dateutil>=2.4
    requests>=2.7
python_requires = >=3.5, <4

[options.extras_require]
docs =
    Sphinx>=2.3,<3
    sphinx_rtd_theme>=0.4,<1
mypy =
    mypy
test =
    coverage>=5,<6
    coveralls>=1.1,<2.0
    flake8>=3.3,<4
    pytest>=6,<7
    pytest-cov>=2,<3
    pytest-mock>=3,<4

[options.package_data]
gyazo =
    py.typed
